fix: Syntax of ServiceAccount
```
error: error validating "sa.yaml": error validating data: [ValidationError(ServiceAccount.secrets[0]): invalid type for io.k8s.api.core.v1.ObjectReference: got "string", expected "map", ValidationError(ServiceAccount.secrets[1]): invalid type for io.k8s.api.core.v1.ObjectReference: got "string", expected "map"]; if you choose to ignore these errors, turn validation off with --validate=fals
```

--- a/jx3-namespace-provision/values.yaml
+++ b/jx3-namespace-provision/values.yaml
@@ -9,8 +9,8 @@ serviceAccounts:
       imagePullSecrets:
           - name: tekton-container-registry-auth
       secrets:
-          - tekton-git
-          - tekton-container-registry-auth
+          - name: tekton-git
+          - name: tekton-container-registry-auth
 
 environment:
     name: dev
