fix: Add missing permissions to `kind: Environment`, configmaps and secrets in same namespace

--- a/jx3-namespace-provision/values.yaml
+++ b/jx3-namespace-provision/values.yaml
@@ -3,6 +3,7 @@ secrets:
     registryDockerConfigJson: ""
     gitUsername: "user"
     gitPassword: "password"
+    gitProviderUrl: https://github.com
 
 serviceAccounts:
     - serviceAccountName: tekton-bot
