--- a/jx3-namespace-provision/templates/secret.yaml
+++ b/jx3-namespace-provision/templates/secret.yaml
@@ -12,6 +12,8 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: tekton-git
+    annotations:
+        tekton.dev/git-0: "{{ .Values.secrets.gitProviderUrl }}"
 data:
     username: "{{ .Values.secrets.gitUsername | b64enc }}"
     password: "{{ .Values.secrets.gitPassword | b64enc }}"
