fix: Add missing permissions to `kind: Environment`, configmaps and secrets in same namespace

--- a/jx3-namespace-provision/templates/role.yaml
+++ b/jx3-namespace-provision/templates/role.yaml
@@ -2,7 +2,7 @@
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-    name: tekton-job
+    name: tekton-bot
 rules:
     # needs access to GIT, Artifactory etc. credentials
     - apiGroups:
