fix: `error: failed to validate: failed to find build number: failed to find BuildNumber: failed to find PipelineActivity resources in namespace jx-test1: pipelineactivities.jenkins.io is forbidden: User "system:serviceaccount:jx-test1:tekton-bot" cannot list resource "pipelineactivities" in API group "jenkins.io" in the namespace "jx-test1"`

--- a/jx3-namespace-provision/templates/role.yaml
+++ b/jx3-namespace-provision/templates/role.yaml
@@ -20,6 +20,7 @@ rules:
           - "jenkins.io"
       resources:
           - environments
+          - pipelineactivities
       verbs:
           - get
           - list
