--- a/jx3-namespace-provision/templates/role.yaml
+++ b/jx3-namespace-provision/templates/role.yaml
@@ -20,6 +20,7 @@ rules:
           - "jenkins.io"
       resources:
           - environments
+          - services
       verbs:
           - get
           - list
