--- a/jx3-namespace-provision/templates/role.yaml
+++ b/jx3-namespace-provision/templates/role.yaml
@@ -11,6 +11,7 @@ rules:
           - configmaps
           - secrets
           - services
+          - ingresses
       verbs:
           - get
           - list
