fix: `WARNING: cannot discover the URL of service jx-pipelines-visualizer in namespace jx-test1 due to getting ingress for service "jx-pipelines-visualizer" in namespace jx-test1: ingresses.networking.k8s.io "jx-pipelines-visualizer" is forbidden: User "system:serviceaccount:jx-test1:tekton-bot" cannot get resource "ingresses" in API group "networking.k8s.io" in the namespace "jx-test1"`

--- a/jx3-namespace-provision/templates/role.yaml
+++ b/jx3-namespace-provision/templates/role.yaml
@@ -11,11 +11,17 @@ rules:
           - configmaps
           - secrets
           - services
+      verbs:
+          - get
+          - list
+
+    - apiGroups:
+        - "networking.k8s.io"
+      resources:
           - ingresses
       verbs:
           - get
           - list
-          - watch
 
     # requires access to Jenkins X configuration specified for this namespace
     - apiGroups:
